# cppchess

./: CMakeLists.txt  README.md
src/chess/: chess_piece.cpp  chess_piece.h  chessboard.h  chessboard_factory.h  main-cli.cpp  main.cpp  standard_chess.cpp  standard_chess.h
src/chess/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/chess/private/: ChessboardWidget.cpp  ChessboardWidget.h  MainWindow.cpp  MainWindow.h
src/chess/private-cli/: chess-cli.cpp  chess-cli.h
